-
Bug
-
Resolution: Done
-
P4: Low
-
4.8.6, 5.3.1, 5.5.1
-
Windows 8.1, Windows 10
-
6cb462d7aa063e5d7bcf3877fa7e7e1c4cacf3ff (qtbase/5.6, 11.2.2016, 5.6.1)
Qt application with QLineEdit and stylesheet with non-white focus background (or background changed through palette) are ignored when playing hover in and hover out animation on frame borders. This causes background of the QLineEdit to become white for a short period of time.
To reproduce, hover mouse on top of QLineEdit in attached example. It should cause background to flash in white briefly while frame borders are animated.
- is duplicated by
-
QTBUG-42575 Windows: Flickering of QLineEdit when using setStyleSheet with background-color (Vista style)
-
- Reported
-
- relates to
-
QTBUG-57862 Windows 10/Vista style: QLineEdit ignores QPalette::Base color role if it is added as a widget to QGraphicsView
-
- Closed
-