src/widgets/styles/qwindowsvistastyle.cpp
@@ -498,26 +498,9 @@ void QWindowsVistaStyle::drawPrimitive(PrimitiveElement element, const QStyleOpt
 
     case PE_PanelLineEdit:
         if (const QStyleOptionFrame *panel = qstyleoption_cast<const QStyleOptionFrame *>(option)) {
-            QBrush bg;
-            bool usePalette = false;
             bool isEnabled = option->state & State_Enabled;
-            uint resolve_mask = panel->palette.resolve();
-            if (widget) {
-            // Since spin box includes a line edit we need to resolve the palette mask also from
-            // the parent, as while the color is always correct on the palette supplied by panel,
-            // the mask can still be empty. If either mask specifies custom base color, use that.
-#ifndef QT_NO_SPINBOX
-                if (QAbstractSpinBox *spinbox = qobject_cast<QAbstractSpinBox*>(widget->parentWidget()))
-                    resolve_mask |= spinbox->palette().resolve();
-#endif // QT_NO_SPINBOX
-            }
-            if (resolve_mask & (1 << QPalette::Base)) {
-                // Base color is set for this widget, so use it
-                bg = panel->palette.brush(QPalette::Base);
-                usePalette = true;
-            }
-            if (usePalette) {
-                painter->fillRect(panel->rect, bg);
+            if (QWindowsXPStylePrivate::isLineEditBaseColorSet(option, widget)) {
+                painter->fillRect(panel->rect, panel->palette.brush(QPalette::Base));
             } else {
                 int partId = EP_BACKGROUND;
                 int stateId = EBS_NORMAL;
